[package]
name = "stm"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
inquire = "0.6"
indicatif = "0.17"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
whoami = "1.0"