[package]
name = "stm"
version = "1.0.0"
edition = "2021"

[dependencies]
git2 = "0.18"
inquire = "0.6"
indicatif = "0.17"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
walkdir = "2.4"
console = "0.15"